fix: wrap sandbox preview

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -31,3 +31,19 @@
 .block {
   display: block;
 }
+
+.invisible {
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
+}
+
+.grid {
+  display: grid;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, 1fr);
+}
